--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ post.get('title') }} - Cuneiform</title>
-  </head>
-  <body>
-    <article class="">
-      <h1>{{ post.get('title') }}</h1>
-      <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
-      <pre>{{ post.get('content') }}</pre>
-    </article>
-  </body>
-</html>
+{% extends "layout.html" %}
+{% block title %}{{ post.get('title') }} - Cuneiform{% endblock %}
+{% block body %}
+  <article class="">
+    <h1>{{ post.get('title') }}</h1>
+    <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+    <pre>{{ post.get('content') }}</pre>
+  </article>
+{% endblock %}
