--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -4,6 +4,6 @@
   <article class="">
     <h1>{{ post.get('title') }}</h1>
     <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
-    <pre>{{ post.get('content') }}</pre>
+    {{ post.get('content')|safe }}
   </article>
 {% endblock %}
