--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -2,8 +2,9 @@
 {% block title %}{{ post.get('title') }} - Cuneiform{% endblock %}
 {% block body %}
   <article class="">
-    <h1>{{ post.get('title') }}</h1>
-    <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
-    {{ post.get('markedContent')|safe }}
+    <h1>{{ post.title }}</h1>
+    <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</p>
+    <img src="{{ post.featuredImage.url }}" alt="" style="max-width: 600px;">
+    {{ post.markedContent|safe }}
   </article>
 {% endblock %}
