--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
     <h3><a href="{{ url_for('show_post', post_id=post.id) }}">{{ post.get('title') }}</a></h3>
     {% endfor %}
   </div>
-  {% if page > 1 %}
-  <p><a href="{{ url_for('index', page=page-1) }}">Prev</a></p>
-  {% endif %}
-  {% if more %}
-  <p><a href="{{ url_for('index', page=page+1) }}">Next</a></p>
-  {% endif %}
+  <nav aria-label="...">
+    <ul class="pager">
+      {% if page > 1 %}<li><a href="{{ url_for('index', page=page-1) }}">Previous</a></li>{% endif %}
+      {% if more %}<li><a href="{{ url_for('index', page=page+1) }}">Next</a></li>{% endif %}
+    </ul>
+  </nav>
 {% else %}
   <div class="no-posts">
     <p>No posts yet. Why not <a href="{{ url_for('post_form') }}">create</a> some?</p>
