feat(users): posts now have authors.

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Editor - Cuneiform{% endblock %}
 {% block body %}
-<p>Logged in. <a href="{{ url_for('logout') }}">Log out</a></p>
+<p>Logged in as {{ current_user.get('nickname') }}. <a href="{{ url_for('logout') }}">Log out</a></p>
 <div class="form">
   <form class="" enctype="multipart/form-data" action="{{ url_for('new_post') }}" method="post">
     <label>Post Title</label>
