--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -3,8 +3,10 @@
 {% block body %}
   <article class="">
     <h1>{{ post.title }}</h1>
-    <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</p>
+    <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }} by {{ post.author.get('nickname') }}</p>
+    {% if post.featuredImage %}
     <img src="{{ post.featuredImage.url }}" alt="" style="max-width: 600px;">
+    {% endif %}
     {{ post.markedContent|safe }}
   </article>
 {% endblock %}
