feat(tags): add and display tags of posts

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -8,6 +8,10 @@
     <br>
     <input type="text" name="title" value="">
     <br>
+    <label>Tags (split by comma)</label>
+    <br>
+    <input type="text" name="tags" value="">
+    <br>
     <label>Featured Image</label>
     <br>
     <input type="file" name="featuredImage" value="">
