--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -3,6 +3,11 @@
 {% block body %}
   <article class="">
     <h1>{{ post.title }}</h1>
+    {% if tags %}
+      <p>{% for tag in tags %}
+        <span class="label label-default">{{ tag.name }}</span>
+      {% endfor %}</p>
+    {% endif %}
     <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }} by {{ post.author.get('nickname') }}</p>
     {% if post.featuredImage %}
     <img src="{{ post.featuredImage.url }}" alt="" style="max-width: 600px;">
