--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -5,7 +5,7 @@
     <h1>{{ post.title }}</h1>
     {% if tags %}
       <p>{% for tag in tags %}
-        <span class="label label-default">{{ tag.name }}</span>
+        <a href="{{ url_for('tag_index', tag_name=tag.name) }}"><span class="label label-default">{{ tag.name }}</span></a>
       {% endfor %}</p>
     {% endif %}
     <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }} by {{ post.author.get('nickname') }}</p>
