--- a/templates/editor.html
+++ b/templates/editor.html
@@ -14,7 +14,7 @@
     <br>
     <label>Featured Image</label>
     <br>
-    <input type="file" name="featuredImage" value="">
+    <input type="file" name="featured_image" value="">
     <br>
     <label>Post Content</label>
     <br>
