--- a/templates/single-post.html
+++ b/templates/single-post.html
@@ -9,9 +9,9 @@
       {% endfor %}</p>
     {% endif %}
     <p>Created at {{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }} by {{ post.author.get('nickname') }}</p>
-    {% if post.featuredImage %}
-    <img src="{{ post.featuredImage.url }}" alt="" style="max-width: 600px;">
+    {% if post.featured_image %}
+    <img src="{{ post.featured_image.url }}" alt="" style="max-width: 600px;">
     {% endif %}
-    {{ post.markedContent|safe }}
+    {{ post.marked_content|safe }}
   </article>
 {% endblock %}
