chore: better project scaffolding

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,5 @@
 {% extends "layout/base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Post{% endblock %}
 {% block content %}
-	Index
+	Post.html
 {% endblock %}
