--- a/templates/post_editor.html
+++ b/templates/post_editor.html
@@ -1,5 +1,5 @@
 {% extends "layout/base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Post Editor{% endblock %}
 {% block content %}
-	Index
+	Post Editor
 {% endblock %}
