--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,5 +1,5 @@
 {% extends "layout/base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Post List{% endblock %}
 {% block content %}
-	Index
+	Post List
 {% endblock %}
