feat: post editor

--- a/templates/post_editor.html
+++ b/templates/post_editor.html
@@ -1,5 +1,15 @@
 {% extends "layout/base.html" %}
 {% block title %}Post Editor{% endblock %}
 {% block content %}
-	Post Editor
+<form action="{{ url_for('create_post') }}", method="post">
+    <label>Post Title</label>
+    <input type="text" name="title">
+    <label>Tags (seperate with `,`)</label>
+    <input type="text" name="tags">
+    <label>Featured Image</label>
+    <input type="file" name="featured_image">
+    <hr>
+    <label>Content</label>
+    <textarea name="content"></textarea>
+</form>
 {% endblock %}
