--- a/templates/post_editor.html
+++ b/templates/post_editor.html
@@ -11,5 +11,6 @@
     <hr>
     <label>Content</label>
     <textarea name="content"></textarea>
+    <input type="submit" value="Submit">
 </form>
 {% endblock %}
