feat: delete post

--- a/templates/post.html
+++ b/templates/post.html
@@ -4,6 +4,7 @@
 <article>
 	<img src="{{ post.get('featuredImage').url }}">
 	<h1>{{ post.get('title') }}</h1>
-	<div>{{ post.get('markedContent')|safe }}</div>
+	<div>{{ post.get('content')|safe }}</div>
+	<a href="{{ url_for('delete_post', post_id=post.id) }}">Delete This Post</a>
 </article>
 {% endblock %}
