refactor: renamed some functions

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,7 +9,7 @@
 	{% if not g.user.is_authenticated %}
 	<li><a href="{{ url_for('login') }}">Login</a></li>
 	{% else %}
-	<li><a href="{{ url_for('post_editor') }}">New Post</a></li>
+	<li><a href="{{ url_for('create_post_form') }}">New Post</a></li>
 	<li><a href="{{ url_for('logout') }}">Logout</a></li>
 	{% endif %}
 </ul>
