--- a/templates/post.html
+++ b/templates/post.html
@@ -8,6 +8,7 @@
 	<h1>{{ post.get('title') }}</h1>
 	<div>{{ post.get('content')|safe }}</div>
 	{% if g.user %}
+    <a href="{{ url_for('update_post_form', post_id=post.id) }}">Edit</a>
 	<a href="{{ url_for('delete_post', post_id=post.id) }}">Delete This Post</a>
 	{% endif %}
 </article>
