styles: basic html

--- a/templates/post.html
+++ b/templates/post.html
@@ -2,18 +2,28 @@
 {% block title %}{{ post.get('title') }}{% endblock %}
 {% block content %}
 <article>
-	{% if post.get('featured_image') %}
-	<img src="{{ post.get('featured_image').get_thumbnail_url(width=600, height=600) }}">
-	{% endif %}
-	<h1>{{ post.get('title') }}</h1>
-    <p>Posted on {{ post.get('createdAt').strftime('%Y-%m-%d %H:%M:%S') }}</p>
-	<div>{{ post.get('marked_content')|safe }}</div>
+    <header>
+    	{% if post.get('featured_image') %}
+    	<img src="{{ post.get('featured_image').get_thumbnail_url(width=600, height=600) }}">
+    	{% endif %}
+    	<h1>{{ post.get('title') }}</h1>
+        <p class="post-create-time">Posted on {{ post.get('createdAt').strftime('%Y-%m-%d %H:%M:%S') }}</p>
+    </header>
+	<div class="post-content">{{ post.get('marked_content')|safe }}</div>
     {% if post.get('createdAt') != post.get('updatedAt') %}
-    <p>Updated on {{ post.get('updatedAt').strftime('%Y-%m-%d %H:%M:%S') }}</p>
+    <footer class="post-update-time">
+        <p>Updated on {{ post.get('updatedAt').strftime('%Y-%m-%d %H:%M:%S') }}</p>
+    </footer>
     {% endif %}
 	{% if g.user %}
-    <a href="{{ url_for('update_post_form', post_id=post.id) }}">Edit</a>
-	<a href="{{ url_for('delete_post', post_id=post.id) }}">Delete This Post</a>
+    <ul class="admin-links">
+        <li>
+            <a href="{{ url_for('update_post_form', post_id=post.id) }}">Edit</a>
+        </li>
+        <li>
+            <a href="{{ url_for('delete_post', post_id=post.id) }}">Delete</a>
+        </li>
+    </ul>
 	{% endif %}
 </article>
 {% endblock %}
