--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{% block title %}{% endblock %} - Cuneiform</title>
+    <title>{% block title %}{% endblock %} - Cuneiform</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<ul>
-	<li><a href="{{ url_for('post_list') }}">All Posts</a></li>
-	{% if not g.user.is_authenticated %}
-	<li><a href="{{ url_for('login') }}">Login</a></li>
-	{% else %}
-	<li><a href="{{ url_for('create_post_form') }}">New Post</a></li>
-	<li><a href="{{ url_for('logout') }}">Logout</a></li>
-	{% endif %}
-</ul>
+<main class="content">
+    <nav class="navigation">
+        <ul>
+            <li><a href="{{ url_for('post_list') }}">All Posts</a></li>
+            {% if not g.user.is_authenticated %}
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            {% else %}
+            <li><a href="{{ url_for('create_post_form') }}">New Post</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% endif %}
+        </ul>
+    </nav>
 {% block content %}{% endblock %}
+</main>
 </body>
 </html>
