--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -1,5 +1,9 @@
-<form action="{{ url_for('login') }}" method="post">
-<input type="text" name="username">
-<input type="password" name="password">
-<input type="submit" value="Login">
-</form>
+{% extends "layout/base.html" %}
+{% block title %}Index{% endblock %}
+{% block content %}
+    <form action="{{ url_for('login') }}" method="post">
+        <input type="text" name="username">
+        <input type="password" name="password">
+        <input type="submit" value="Login">
+    </form>
+{% endblock %}
