--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -8,5 +8,11 @@
 {% for post in posts %}
 	<h1><a href="{{ url_for('show_post', post_id=post.id) }}">{{ post.get('title') }}</a></h1>
 {% endfor %}
+<nav class="pagination">
+<ul>
+	<li><a {% if not has_next %}class="disabled"{% endif %} href="{{ url_for('post_list', page=current_page + 1) }}">Older Posts</a></li>
+	<li><a {% if not has_prev %}class="disabled"{% endif %} href="{{ url_for('post_list', page=current_page - 1) }}">Newer Posts</a></li>
+</ul>
+</nav>
 </section>
 {% endblock %}
