--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -3,6 +3,7 @@
 <head>
     <title>{% block title %}{% endblock %} - Cuneiform</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0">
 </head>
 <body>
 <nav class="navigation">
