--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <header>
     <h1>Login</h1>
-    <p>Login to create or delete posts. Add a user in LeanCloud dashboard.</p>
+    <p>Login to manage posts. Add a user in <a href="https://leancloud.cn/dashboard/">LeanCloud dashboard</a>.</p>
 </header>
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="username" placeholder="Username">
